--- a/libs/Microsoft.MixedReality.WebRTC.Native/src/win32/Microsoft.MixedReality.WebRTC.Native.Win32.vcxproj.filters
+++ b/libs/Microsoft.MixedReality.WebRTC.Native/src/win32/Microsoft.MixedReality.WebRTC.Native.Win32.vcxproj.filters
@@ -12,6 +12,12 @@
     <ClCompile Include="../data_channel.cpp">
       <Filter>media</Filter>
     </ClCompile>
+    <ClCompile Include="../media/mf_video_track_source.cpp">
+      <Filter>media</Filter>
+    </ClCompile>
+    <ClCompile Include="../media/external_video_track_source.cpp">
+      <Filter>media</Filter>
+    </ClCompile>
     <ClCompile Include="../str.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -26,6 +32,12 @@
       <Filter>interop</Filter>
     </ClInclude>
     <ClInclude Include="../data_channel.h">
+      <Filter>media</Filter>
+    </ClInclude>
+    <ClInclude Include="../media/mf_video_track_source.h">
+      <Filter>media</Filter>
+    </ClInclude>
+    <ClInclude Include="../media/external_video_track_source.h">
       <Filter>media</Filter>
     </ClInclude>
     <ClInclude Include="../../include/str.h" />
